--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="./assets/glock.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="./assets/poster.webp" shadow-intensity="1.14" exposure="1" shadow-softness="0" animation-name="Armature|Cinema_4D_Basis|Layer0">
+    <model-viewer src="./assets/glock.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls disable-tap tone-mapping="commerce" poster="./assets/poster.webp"  shadow-intensity="1.14" exposure="1" shadow-softness="0" animation-name="Armature|Cinema_4D_Basis|Layer0">
       <button class="Hotspot" slot="hotspot-1" data-surface="27 0 26221 26174 23622 0.680 0.017 0.303" data-visibility-attribute="visible">
           <div class="HotspotAnnotation">Glock45 Frame</div>
       </button><button class="Hotspot" slot="hotspot-2" data-surface="41 0 1036 2849 2851 0.610 0.009 0.381" data-visibility-attribute="visible">
@@ -69,7 +69,7 @@
       });
     </script>
 
-<div style="text-align: center;background-color: rgb(0, 0, 0); padding: 20px;">
+<div style="text-align: center;background-color: rgb(255, 0, 0); padding: 20px; height: 10vh;">
   <img id="cc-xr" src="./assets/cc-xr.jpg" alt="Center Image">
 </div>
     
