Debug Colors for Mobile

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       });
     </script>
 
-<div style="text-align: center;background-color: rgb(255, 0, 0); padding: 20px; height: 10vh;">
+<div style="text-align: center;background-color: rgb(255, 0, 0)">
   <img id="cc-xr" src="./assets/cc-xr.jpg" alt="Center Image">
 </div>
     
