--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </style>
   </head>
   <body>
+    
+
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="./assets/glock.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls disable-tap tone-mapping="commerce" poster="./assets/poster.webp"  shadow-intensity="1.14" exposure="1" shadow-softness="0" animation-name="Armature|Cinema_4D_Basis|Layer0">
+    <model-viewer src="./assets/glock.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls disable-tap tone-mapping="commerce" shadow-intensity="1.14" exposure="1" shadow-softness="0" animation-name="Armature|Cinema_4D_Basis|Layer0">
       <button class="Hotspot" slot="hotspot-1" data-surface="27 0 26221 26174 23622 0.680 0.017 0.303" data-visibility-attribute="visible">
           <div class="HotspotAnnotation">Glock45 Frame</div>
       </button><button class="Hotspot" slot="hotspot-2" data-surface="41 0 1036 2849 2851 0.610 0.009 0.381" data-visibility-attribute="visible">
@@ -42,34 +44,22 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const hotspotButtons = document.querySelectorAll('button.Hotspot');
-        const hotspotAnnotations = document.querySelectorAll('.HotspotAnnotation');
-
-        hotspotAnnotations.forEach(annotation => {
-          annotation.classList.remove('visible');
-        });
 
         hotspotButtons.forEach(button => {
-          button.addEventListener('mouseenter', function() {
+          button.addEventListener('focus', function() {
             const annotation = this.querySelector('.HotspotAnnotation');
             annotation.classList.add('visible');
           });
 
-          button.addEventListener('mouseleave', function() {
+          button.addEventListener('blur', function() {
             const annotation = this.querySelector('.HotspotAnnotation');
-            if (!annotation.classList.contains('active')) {
-              annotation.classList.remove('visible');
-            }
-          });
-
-          button.addEventListener('click', function() {
-            const annotation = this.querySelector('.HotspotAnnotation');
-            annotation.classList.toggle('active');
+            annotation.classList.remove('visible');
           });
         });
       });
     </script>
 
-<div style="text-align: center;background-color: rgb(255, 0, 0)">
+<div style="text-align: center; background-color: rgb(0, 0, 0); padding-top: 10px;">
   <img id="cc-xr" src="./assets/cc-xr.jpg" alt="Center Image">
 </div>
     
