--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-      <button slot="ar-button" id="ar-button">
+      <!-- <button slot="ar-button" id="ar-button">
           AR-Modus
       </button>
       <div id="ar-prompt">
           <img src="./assets/ar_hand_prompt.png">
-      </div>
+      </div> -->
     </model-viewer>  
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
