--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const hotspotButtons = document.querySelectorAll('button.Hotspot');
