hotspot buttons resized back to 24px

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             if (this === hotspotButtons[2]) {
               const modelViewer = document.querySelector('model-viewer');
-              // modelViewer.play({1, 0});
+              // modelViewer.play({repetitions: 5});
               modelViewer.currentTime = 0;
               modelViewer.timeScale = 5;
               modelViewer.play();
