added controls for the fx

--- a/index.html
+++ b/index.html
@@ -59,18 +59,30 @@
       </div>
 
       <div class="controls">
-        <label for="outline">Outline Effect</label>
-        <input type="checkbox" id="outline">
-        <label for="ssao">SSAO Effect</label>
-        <input type="checkbox" id="ssao">
-        <label for="glitch">Glitch Effect</label>
-        <input type="checkbox" id="glitch">
-        <label for="smaa">SMAA Effect</label>
-        <input type="checkbox" id="smaa">
-        <label for="bloom">Bloom Effect</label>
-        <input type="checkbox" id="bloom">
-        <label for="pixelate">Pixelate Effect</label>
-        <input type="checkbox" id="pixelate">
+        <div class="controls-checkbox">
+          <label for="outline">Outline Effect</label>
+          <input type="checkbox" id="outline">
+        </div>
+        <div class="controls-checkbox">
+          <label for="ssao">SSAO Effect</label>
+          <input type="checkbox" id="ssao">
+        </div>
+        <div class="controls-checkbox">
+          <label for="glitch">Glitch Effect</label>
+          <input type="checkbox" id="glitch">
+        </div>
+        <div class="controls-checkbox">
+          <label for="smaa">SMAA Effect</label>
+          <input type="checkbox" id="smaa">
+        </div>
+        <div class="controls-checkbox">
+          <label for="bloom">Bloom Effect</label>
+          <input type="checkbox" id="bloom">
+        </div>
+        <div class="controls-checkbox">
+          <label for="pixelate">Pixelate Effect</label>
+          <input type="checkbox" id="pixelate">
+        </div>
         <!-- <label for="colorgrade">Color Grade Effect</label> -->
         <!-- <input type="checkbox" id="colorgrade" checked> -->
       </div>
